--- a/README
+++ b/README
@@ -1,11 +1,26 @@
 This is your new Play 2.0 application
 =====================================
 
-This file will be packaged with your application, when using `play dist`.
 
+Required Environment Variables
+------------------------------
+
+The app will not run without these settings. Ask the meeting organizers for details.
+
+export LSUG_MEETUP_GROUP_ID="your value"
+export LSUG_MEETUP_KEY="your value"
+
+// for http://lsug.org
+export LSUG_MEETUP_ID="8hb7m06tmkrv44thc9q2qvtcc3"
+
+// alternatively for http://localhost:9000
+export LSUG_MEETUP_ID="6uaao0sbsmt6u6rj17v4lu5u9"
+
+We decided to go with environment variables instead of command line arguments.
 
 
 Configuring MongoLabs with Play
+-------------------------------
 
 How to configure MongoDB with Play when running MongoLabs addon in Heroku.
 
@@ -29,8 +44,6 @@ Or do you also need to include it in your play framework configuration in config
 # ~~~~~
 # a MongoURI can also be used http://www.mongodb.org/display/DOCS/Connections
 # mongodb.default.uri = "mongodb://127.0.0.1:27017,mongodb.org:1337/salat-test"
-# mongodb.uri="mongodb://127.0.0.1:27017/heroku_app8030104"
-mongodb.default.uri="mongodb://heroku_app8030104:u37aro46ggr991mvgdmb5on5n9@ds037987.mongolab.com:37987/heroku_app8030104"
 
 
 Using the universal resource indicator directly in the application.conf will work when running play2 / mongo application on your development machine and heroku.  However, there is an obvious issue that you may not want to change the contents of your app on heroku and use the same db for both environments leads to this issue.
