--- a/README
+++ b/README
@@ -4,20 +4,18 @@ This is your new Play 2.0 application
 Required Environment Variables
 ------------------------------
 
-The app will not run without these settings. Ask the meeting organizers for details.
+The app can run with the default settings from conf/application.conf. 
 
-export LSUG_MEETUP_GROUP_ID="your value"
-export LSUG_MEETUP_KEY="your value"
+export LSUG_MEETUP_GROUP_ID="..."
+export LSUG_MEETUP_KEY="..."
 
-// for http://lsug.org
+# for http://lsug.org
 export LSUG_MEETUP_ID="8hb7m06tmkrv44thc9q2qvtcc3"
 
-// alternatively for http://localhost:9000
+# alternatively for http://localhost:9000
 export LSUG_MEETUP_ID="6uaao0sbsmt6u6rj17v4lu5u9"
 
-export LSUG_MONGODB_DEFAULT_URI="your value"
-
-We decided to go with environment variables instead of command line arguments.
+export LSUG_MONGODB_DEFAULT_URI="..."
 
 
 Environment Variables on Heroku
