--- a/README
+++ b/README
@@ -5,6 +5,17 @@ Install play on MacOS using homebrew
 ------------------------------------
 brew install --devel play
 
+Importing the project in IntelliJ IDEA v. 12.x
+----------------------------------------------
+0/ Make sure you have the scala plugin install
+1/ Install sbt
+brew install sbt
+2/ Install gen-idea sbt plugin [https://github.com/mpeltonen/sbt-idea]
+Add the following lines to ~/.sbt/plugins/build.sbt or PROJECT_DIR/project/plugins.sbt
+addSbtPlugin("com.github.mpeltonen" % "sbt-idea" % "1.2.0")
+3/ Create idea project files
+./sbt gen-idea
+4/ Open project in IDA
 
 This is your new Play 2.0 application
 =====================================
